updated css codes

--- a/base.html
+++ b/base.html
@@ -11,7 +11,7 @@
 <body>
     <div id="main-conatainer">
         <div id="sub-cotainer">header</div>
-        <div id="sub-cotainer">sidebar</div>
+        <div id="sub-cotainer">sidebars</div>
         <div id="sub-cotainer">main</div>
         <div id="sub-cotainer">footer</div>
     </div>
